# Programming-in-a-high-level-language

./: READ_ME.md
assignment2/: array_class.py  test_array.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  test.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py  timing-report.txt
assignment4/: collect_dates.py  example-plot.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py  wiki_race_challenge.py
assignment5/: READ_ME.md  app.py  http_cache.sqlite  strompris.py
assignment5/source/: conf.py  index.rst
assignment5/templates/: strompris.html
assignment_1/: friendly_greeting.txt  gitconflict.txt  less_friendly_greeting.txt  myfirstcommit.txt
